@@ -1,201 +1,229 @@
 package main.objreader;
 
-import java.util.*;
+import main.objtoken.ObjToken;
 import main.math.Vector2f;
 import main.math.Vector3f;
 import main.model.Polygon;
 import main.model.Model;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Scanner;
+
 public class ObjReader {
 
-    private static final String OBJ_VERTEX_TOKEN = "v";
-    private static final String OBJ_TEXTURE_TOKEN = "vt";
-    private static final String OBJ_NORMAL_TOKEN = "vn";
-    private static final String OBJ_FACE_TOKEN = "f";
-    private static final String OBJ_COMMENT_TOKEN = "#";
-    private static List<Integer> polygonIds = new ArrayList<>();
-
-    public static Model read(String fileContent) throws IncorrectFileException {
-        ArrayList<Vector3f> vertices = new ArrayList<>();
-        ArrayList<Vector2f> textureVertices = new ArrayList<>();
-        ArrayList<Vector3f> normals = new ArrayList<>();
-        ArrayList<Polygon> polygons = new ArrayList<>();
-        int lineInd = 0;
+    public static Model read(String fileContent) {
         Scanner scanner = new Scanner(fileContent);
+
+        Model model = new Model();
+
+        int fileLineId = 0;
         while (scanner.hasNextLine()) {
-            final String line = scanner.nextLine();
-            ArrayList<String> wordsInLine = new ArrayList<String>(Arrays.asList(line.trim().split("\\s+")));
-            if (wordsInLine.isEmpty()) {
+            fileLineId++;
+
+            String line = scanner.nextLine();
+            List<String> wordsInLine = new ArrayList<>(List.of(line.split("\\s+")));
+            if (wordsInLine.isEmpty() || wordsInLine.get(0).equals("")) {
                 continue;
             }
 
-            final String token = wordsInLine.get(0);
+            ObjToken token = ObjToken.fromString(wordsInLine.get(0));
             wordsInLine.remove(0);
 
-            ++lineInd;
             switch (token) {
-                case OBJ_VERTEX_TOKEN -> vertices.add(parseVertex(wordsInLine, lineInd));
-                case OBJ_TEXTURE_TOKEN -> textureVertices.add(parseTextureVertex(wordsInLine, lineInd));
-                case OBJ_NORMAL_TOKEN -> normals.add(parseNormal(wordsInLine, lineInd));
-                case OBJ_FACE_TOKEN -> {
-                    polygons.add(parseFace(wordsInLine, lineInd));
-                    polygonIds.add(lineInd);
-                }
-                case OBJ_COMMENT_TOKEN -> System.out.println(line);
-                default -> {
-                    System.out.println("Warning! Unknown token on line " + lineInd);
-                }
+                case DEFAULT -> {}
+                case VERTEX -> model.vertices.add(parseVertex(wordsInLine, fileLineId));
+                case TEXTURE -> model.textureVertices.add(parseTextureVertex(wordsInLine, fileLineId));
+                case NORMAL -> model.normals.add(parseNormal(wordsInLine, fileLineId));
+                case FACE -> model.polygons.add(parseFace(wordsInLine, fileLineId));
+                case COMMENT -> model.comments.put(fileLineId, listToString(wordsInLine));
+                case MATERIAL -> model.materials.put(fileLineId, parseMaterial(model, wordsInLine, fileLineId));
+                case MATERIAL_LIB -> model.mtlFileName = parseMaterialLib(wordsInLine, fileLineId);
             }
         }
-        int lengthVertex = vertices.size();
-        int lengthTextureVertex = textureVertices.size();
-        int lengthNormal = normals.size();
-        format(polygons, lengthVertex, lengthTextureVertex, lengthNormal);
-        return new Model(vertices, textureVertices, normals, polygons);
+
+        return model;
     }
 
-    // Всем методам кроме основного я поставил модификатор доступа protected, чтобы обращаться к ним в тестах
-    protected static Vector3f parseVertex(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
-        if (wordsInLineWithoutToken.size()>3){
-            throw new ObjReaderException("Too many vertex arguments.", lineInd);
+    public static String parseMaterialLib(List<String> wordsInLine, int fileLineId) {
+        if (wordsInLine.size() != 1) {
+            throw new ObjReaderException("The .mtl file must be one.", fileLineId);
         }
+
+        String[] words = wordsInLine.get(0).split("\\.");
+        if (words.length == 1 || !words[words.length - 1].equals("mtl")) {
+            throw new ObjReaderException("The mtllib command must contain a file with the .mtl extension.",
+                    fileLineId);
+        }
+
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < words.length - 1; i++) {
+            sb.append(words[i]).append(".");
+        }
+
+        return sb.append("mtl").toString();
+    }
+
+    public static String parseMaterial(Model model, List<String> wordsInLine, int fileLineId) {
+        if (model.mtlFileName.equals("")) {
+            throw new ObjReaderException("The .mtl file for taking textures is not specified.", fileLineId);
+        }
+
+        if (wordsInLine.size() != 1) {
+            throw new ObjReaderException("The title of the material must be 1 word.", fileLineId);
+        }
+
+        return wordsInLine.get(0);
+    }
+
+    private static String listToString(List<String> words) {
+        if (words.size() == 0) {
+            return "";
+        }
+
+        StringBuilder sb = new StringBuilder(words.get(0));
+
+        for (int i = 1; i < words.size(); i++) {
+            sb.append(" ").append(words.get(i));
+        }
+
+        return sb.toString();
+    }
+
+    public static Vector3f parseVertex(List<String> wordsInLineWithoutToken, int fileLineId) {
+        if (wordsInLineWithoutToken.size() != 3) {
+            throw new ObjReaderException("Error reading a vertex. Only x, y, z coordinates " +
+                    "should be present in the description.", fileLineId);
+        }
+
         try {
             return new Vector3f(
                     Float.parseFloat(wordsInLineWithoutToken.get(0)),
                     Float.parseFloat(wordsInLineWithoutToken.get(1)),
                     Float.parseFloat(wordsInLineWithoutToken.get(2)));
-        } catch(NumberFormatException e) {
-            throw new ObjReaderException("Failed to parse float value.", lineInd);
-
-        } catch(IndexOutOfBoundsException e) {
-            throw new ObjReaderException("Too few vertex arguments.", lineInd);
+        } catch (NumberFormatException e) {
+            throw new ObjReaderException("Failed to parse float value.", fileLineId);
         }
     }
 
-    protected static Vector2f parseTextureVertex(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
-        if (wordsInLineWithoutToken.size()>2){
-            throw new ObjReaderException("Too many texture vertex arguments.", lineInd);
+    public static Vector2f parseTextureVertex(List<String> wordsInLineWithoutToken, int fileLineId) {
+        if (wordsInLineWithoutToken.size() < 2 || wordsInLineWithoutToken.size() > 3) {
+            throw new ObjReaderException("Error reading texture vertex. Only u, v arguments should be present " +
+                    "in the description.", fileLineId);
         }
+
         try {
             return new Vector2f(
                     Float.parseFloat(wordsInLineWithoutToken.get(0)),
                     Float.parseFloat(wordsInLineWithoutToken.get(1)));
+        } catch (NumberFormatException e) {
+            throw new ObjReaderException("Failed to parse float value.", fileLineId);
 
-        } catch(NumberFormatException e) {
-            throw new ObjReaderException("Failed to parse float value.", lineInd);
-
-        } catch(IndexOutOfBoundsException e) {
-            throw new ObjReaderException("Too few texture vertex arguments.", lineInd);
         }
     }
 
-    protected static Vector3f parseNormal(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
-        if (wordsInLineWithoutToken.size()>3){
-            throw new ObjReaderException("Too many normal arguments.", lineInd);
+    public static Vector3f parseNormal(List<String> wordsInLineWithoutToken, int fileLineId) {
+        if (wordsInLineWithoutToken.size() != 3) {
+            throw new ObjReaderException("Error reading a normal. Only x, y, z coordinates " +
+                    "should be present in the description.", fileLineId);
         }
+
         try {
             return new Vector3f(
                     Float.parseFloat(wordsInLineWithoutToken.get(0)),
                     Float.parseFloat(wordsInLineWithoutToken.get(1)),
                     Float.parseFloat(wordsInLineWithoutToken.get(2)));
-
-        } catch(NumberFormatException e) {
-            throw new ObjReaderException("Failed to parse float value.", lineInd);
-
-        } catch(IndexOutOfBoundsException e) {
-            throw new ObjReaderException("Too few normal arguments.", lineInd);
+        } catch (NumberFormatException e) {
+            throw new ObjReaderException("Failed to parse float value.", fileLineId);
         }
     }
 
-    protected static Polygon parseFace(final ArrayList<String> wordsInLineWithoutToken, int lineInd) {
-        if (wordsInLineWithoutToken.size()<3){
-            throw new ObjReaderException("Not enough vertex to create polygon.", lineInd);
-        }
-        ArrayList<Integer> onePolygonVertexIndices = new ArrayList<Integer>();
-        ArrayList<Integer> onePolygonTextureVertexIndices = new ArrayList<Integer>();
-        ArrayList<Integer> onePolygonNormalIndices = new ArrayList<Integer>();
 
-        parseFaceWord(wordsInLineWithoutToken.get(0), onePolygonVertexIndices, onePolygonTextureVertexIndices, onePolygonNormalIndices, lineInd);
-        int baseCountType = onePolygonTextureVertexIndices.size()+onePolygonNormalIndices.size()+onePolygonVertexIndices.size();
-        for (int s=1; s<wordsInLineWithoutToken.size(); s++) {
-            parseFaceWord(wordsInLineWithoutToken.get(s), onePolygonVertexIndices, onePolygonTextureVertexIndices, onePolygonNormalIndices, lineInd);
-            if (baseCountType*(s+1)!=onePolygonTextureVertexIndices.size()+onePolygonNormalIndices.size()+onePolygonVertexIndices.size()){
-                throw new ObjReaderException("Incorrect data for polygon.", lineInd);
-            }
+    public static Polygon parseFace(List<String> wordsInLineWithoutToken, int fileLineId) {
+        List<Integer> polygonVertexIndices = new ArrayList<>();
+        List<Integer> polygonTextureVertexIndices = new ArrayList<>();
+        List<Integer> polygonNormalIndices = new ArrayList<>();
+
+        int descriptionType = 0;
+        for (String value : wordsInLineWithoutToken) {
+            descriptionType = parseFaceWord(descriptionType, value, polygonVertexIndices, polygonTextureVertexIndices, polygonNormalIndices,
+                    fileLineId);
         }
-        Set<Integer> set = new HashSet<>();
-        for (Integer vertex: onePolygonVertexIndices) {
-            if(!set.add(vertex)){
-                throw new ObjReaderException("The vertices of the polygon must not be repeated.", lineInd);
-            }
-        }
-        Polygon result = new Polygon();
-        result.setVertexIndices(onePolygonVertexIndices);
-        result.setTextureVertexIndices(onePolygonTextureVertexIndices);
-        result.setNormalIndices(onePolygonNormalIndices);
-        return result;
+
+        Polygon polygon = new Polygon();
+        polygon.setVertexIndices(polygonVertexIndices);
+        polygon.setTextureVertexIndices(polygonTextureVertexIndices);
+        polygon.setNormalIndices(polygonNormalIndices);
+
+        return polygon;
     }
 
-    protected static void parseFaceWord(
-            String wordInLine,
-            ArrayList<Integer> onePolygonVertexIndices,
-            ArrayList<Integer> onePolygonTextureVertexIndices,
-            ArrayList<Integer> onePolygonNormalIndices,
-            int lineInd) {
+    public static int parseFaceWord(int descriptionType,
+                                    String wordInLine,
+                                    List<Integer> polygonVertexIndices,
+                                    List<Integer> polygonTextureVertexIndices,
+                                    List<Integer> polygonNormalIndices,
+                                    int fileLineId) {
         try {
             String[] wordIndices = wordInLine.split("/");
             switch (wordIndices.length) {
                 case 1 -> {
-                    onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]));
-                }
-                case 2 -> {
-                    onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]));
-                    onePolygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]));
-                }
-                case 3 -> {
-                    onePolygonVertexIndices.add(Integer.parseInt(wordIndices[0]));
-                    onePolygonNormalIndices.add(Integer.parseInt(wordIndices[2]));
-                    if (!wordIndices[1].equals("")) {
-                        onePolygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]));
+                    if (descriptionType == 0) {
+                        descriptionType = 1;
+                    }
+
+                    if (descriptionType == 1) {
+                        polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+                    } else {
+                        causeErrPolygonVertexDescription(fileLineId);
                     }
                 }
-                default -> {
-                    throw new ObjReaderException("Invalid element size.", lineInd);
+                case 2 -> {
+                    if (descriptionType == 0) {
+                        descriptionType = 2;
+                    }
+
+                    if (descriptionType == 2) {
+                        polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+                        polygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
+                    } else {
+                        causeErrPolygonVertexDescription(fileLineId);
+                    }
                 }
+                case 3 -> {
+                    if (descriptionType == 0) {
+                        descriptionType = wordIndices[1].equals("") ? 3 : 4;
+                    }
+
+                    if (descriptionType == 3) {
+                        if (wordIndices[1].equals("")) {
+                            polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+                            polygonNormalIndices.add(Integer.parseInt(wordIndices[2]) - 1);
+                        } else {
+                            causeErrPolygonVertexDescription(fileLineId);
+                        }
+                    } else if (descriptionType == 4) {
+                        polygonVertexIndices.add(Integer.parseInt(wordIndices[0]) - 1);
+                        polygonTextureVertexIndices.add(Integer.parseInt(wordIndices[1]) - 1);
+                        polygonNormalIndices.add(Integer.parseInt(wordIndices[2]) - 1);
+                    } else {
+                        causeErrPolygonVertexDescription(fileLineId);
+                    }
+                }
+                default -> throw new ObjReaderException("Invalid polygon vertex description.", fileLineId);
             }
 
-        } catch(NumberFormatException e) {
-            throw new ObjReaderException("Failed to parse int value.", lineInd);
-
-        } catch(IndexOutOfBoundsException e) {
-            throw new ObjReaderException("Too few arguments.", lineInd);
+        } catch (NumberFormatException e) {
+            throw new ObjReaderException("Failed to parse int value.", fileLineId);
+        } catch (IndexOutOfBoundsException e) {
+            causeErrPolygonVertexDescription(fileLineId);
         }
+
+        return descriptionType;
     }
-    protected static void format(ArrayList<Polygon> polygons, int lengthVertex, int lengthTextureVertex, int lengthNormal) {
-        int count = 0;
-        for (Polygon pol: polygons) {
-            ArrayList<Integer> vertexIndices = pol.getVertexIndices();
-            ArrayList<Integer> textureVertexIndices = pol.getTextureVertexIndices();
-            ArrayList<Integer> normalIndices = pol.getNormalIndices();
 
-            formatArray(vertexIndices, lengthVertex, count);
-            formatArray(textureVertexIndices, lengthTextureVertex, count);
-            formatArray(normalIndices, lengthNormal, count);
-
-            count++;
-        }
-    }
-    protected static void formatArray(ArrayList<Integer> array, int n, int count) {
-        for (int i = 0; i < array.size(); i++) {
-            if (Math.abs(array.get(i))>n){
-                throw new ObjReaderException("Incorrect polygon parameters set.", polygonIds.get(count));
-            }else {
-                if (array.get(i) > 0) {
-                    array.set(i, array.get(i) - 1);
-                } else {
-                    array.set(i, array.get(i) + n);
-                }
-            }
-        }
+    private static void causeErrPolygonVertexDescription(int fileLineId) {
+        throw new ObjReaderException("Polygon vertex descriptions must be in the same format.",
+                fileLineId);
     }
 }
